--- a/canvas_eg.html
+++ b/canvas_eg.html
@@ -2,7 +2,6 @@
 <head>
   <title>Canvas</title>
   <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -57,8 +56,8 @@ function reset(){
 }
 
 function start_generating_obstacles(){
-  setInterval(generate_obstacles,4000)
-  // generate_obstacles()
+  // setInterval(generate_obstacles,4000)
+  generate_obstacles()
 }
 
 
@@ -68,13 +67,14 @@ function generate_obstacles(){
  if(frame<1000){
     random_position_start = Math.floor(Math.random()*300)  //width of the canvas is hardcoded into this
     random_width = Math.floor(Math.random()*300)  //width of the canvas is hardcoded into this
+    random_height = Math.floor(Math.random()*300)  //width of the canvas is hardcoded into this
     random_radius = 5+Math.floor(Math.random()*100)  //width of the canvas is hardcoded into this
     random_position_end = random_position_start+(10+Math.floor(Math.random()*150)) //this 90 represents how large the obstacle can be
   scroll()
   function scroll(){
     reset()
-      // document.getElementById("matts_cats").getContext("2d").fillRect(random_position_start, frame, random_width, random_height)
-      document.getElementById("matts_cats").getContext("2d").arc(random_position_start,frame,random_radius,0,2 * Math.PI, false)
+      document.getElementById("matts_cats").getContext("2d").fillRect(random_position_start, frame, random_width, random_height)
+      // document.getElementById("matts_cats").getContext("2d").arc(random_position_start,frame,random_radius,0,2 * Math.PI, false)
       frame+=2
       document.getElementById("matts_cats").getContext("2d").strokeStyle = "black";
       document.getElementById("matts_cats").getContext("2d").stroke();
