--- a/canvas_demo.html
+++ b/canvas_demo.html
@@ -17,7 +17,9 @@ var context=canvas.getContext('2d')
 
 function draw_rect()
 {
-  context.fillRect(30,30,40,50)
+	var x=Math.floor(Math.random()*500)
+	var y=Math.floor(Math.random()*500)
+  context.fillRect(x,y,40,50)
 }
 
 function reset()
